# memeprotocol

./: .env  DEPLOYMENT_GUIDE.md  README.md  SETUP_INSTRUCTIONS.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
contracts/: README.md
contracts/token-factory/: Cargo.toml
contracts/token-factory/src/: contract.rs  error.rs  msg.rs  state.rs
src/: App.tsx  index.css
src/components/: AddLiquidityForm.tsx  AnimatedText.tsx  CreateTokenForm.tsx  Header.tsx  MemeTokenAnimation.tsx  NewTokensSection.tsx  TokenCard.tsx  TrendingTokensSection.tsx  WalletSelector.tsx
src/components/ui/: button.tsx  card.tsx  input.tsx
src/config/: MemeCoinFactory.json  MemeToken.json  contracts.ts  evm.ts
src/contexts/: WalletContext.tsx
src/hooks/: useContractConfig.ts  useCreateEvmToken.ts  useTokenCreation.ts  useTokens.ts  useUserTokens.ts
src/integrations/supabase/: types.ts
src/pages/: ContractConfig.tsx  CreateToken.tsx  Index.tsx  ManageToken.tsx  Markets.tsx  NotFound.tsx  Profile.tsx  Trade.tsx
supabase/: config.toml
supabase/migrations/: 20251012190849_d15cbdb2-67e7-4134-9cda-43f1ef9a361d.sql  20251012190913_6c609876-5dc7-4acd-b4bb-d008fe448f51.sql  20251013175712_c3b64145-420c-4b26-9e36-0d320619916c.sql  20251013175834_18fda1c5-180d-4091-b957-6ed8b7d46d9c.sql
