[package]
name = "token-factory"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = "1.5"
cosmwasm-schema = "1.5"
cw-storage-plus = "1.2"
cw2 = "1.1"
cw20 = "1.1"
cw20-base = { version = "1.1", default-features = false, features = ["library"] }
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

